tests/bug_detector_tests/globalThis3.test
################################################################################
#    Copyright (c) 2013, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=globalThis3
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector
bug-detector_out_WCIequals=\
 \n\
 \n\
 \n\
 \n\
* Bug Detector * \n\
${BUGDETECTOR_TESTS_DIR}/globalThis3.js:11:32~11:36: [Warning] 'this' may refer the global object. \n\
${BUGDETECTOR_TESTS_DIR}/globalThis3.js:11:32~11:38: [Warning] Reading absent property 'p' of an object. \n\
# ReferenceErrors(#) : 0 \n\
# TypeErrors(#)      : 0 \n\
# Warnings(#)        : 2 \n\
 \n\
 \n\
\n
bug-detector_err_equals=
